# face-auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
app/: server.py
app/bases/: vectorstore.py
app/configs/: face_models.py
app/databases/: qdrant.py
app/typings/: api_response.py  healthcheck.py  user.py
scripts/: entrypoint.sh
